<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="error_msg">An error has occurred</string>
    <string name="play">Play</string>
    <string name="remove">Remove</string>
    <string name="more">More</string>
    <string name="like">Like</string>
    <string name="ok_text">OK</string>
    <string name="additional_action_one">Save</string>
    <string name="additional_action_two">Share</string>
    <string name="additional_action_three">Mark</string>
    <string name="album">Album</string>
    <string name="track">Track</string>
    <string name="executor">Executor:</string>
    <string name="published">Published</string>
    <string name="genre">Genre</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown error</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
</resources>