<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/play"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/albumTitle"
        app:layout_constraintEnd_toStartOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/play"
        app:layout_constraintTop_toTopOf="@id/play"
        tools:text="Melody Title" />

    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintEnd_toStartOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/play"
        app:layout_constraintTop_toBottomOf="@id/songTitle"
        tools:text="Title Album " />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/like"
        android:gravity="center"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintStart_toEndOf="@id/albumTitle"
        app:layout_constraintTop_toTopOf="@id/play"
        tools:checked="true" />

    <ImageButton
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/remove"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_remove_24"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintEnd_toStartOf="@id/more"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/play" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainButtonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="like, remove"
        app:layout_constraintBottom_toTopOf="@id/play"
        app:layout_constraintEnd_toStartOf="@id/more"
        app:layout_constraintStart_toEndOf="@id/songTitle"
        app:layout_constraintTop_toTopOf="@id/play"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:contentDescription="@string/more"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_more_horiz_24"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/remove"
        app:layout_constraintTop_toTopOf="@id/play" />

</androidx.constraintlayout.widget.ConstraintLayout>